--- a/views/test_10.html
+++ b/views/test_10.html
@@ -1,14 +1,12 @@
+<!-- https://enable3d.io/docs.html -->
+<!-- https://enable3d.io/examples.html -->
+<!-- https://github.com/cmw1017/enable3d-website -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>GLTFLoader with Physics</title>
-    <link rel="stylesheet" href="/external/css/examples.css?ver=1.0.0" />
     <script src="/external/js/examples.js?ver=1.1.1"></script>
     <script src="/external/lib/three.min.js?ver=r130"></script>
     <script src="/external/lib/GLTFLoader.js"></script>
@@ -17,19 +15,107 @@
   </head>
 
   <body>
-    <script>
-      const { AmmoPhysics, PhysicsLoader } = ENABLE3D
+    <div id="info">Ammo.js physics soft body rope demo Press Q or A to move the arm.   <button id="startStop">Start</button>   <button id="export">export</button><br /></div>
+    <script type = "module">
+      import { STLExporter } from "/node_modules/three/examples/jsm/exporters/STLExporter.js";
+      const { AmmoPhysics, PhysicsLoader, ExtendedObject3D } = ENABLE3D
+
+      let scene, camera, physics, container;
+      let state = false;
+      let meshNum = 0;
+
+      function createCylinder() {
+
+        if ( !state ) return;
+
+        meshNum++;
+        console.log(meshNum);
+
+        const loader = new THREE.GLTFLoader().load('/glbs/cylinder_v2.glb', function (gltf) {
+          const mesh = gltf.scene.children[0]
+          mesh.position.setX(Math.random() * 2 - 1)
+          mesh.position.setY(5)
+          mesh.position.setZ(Math.random() * 2 - 1)
+          mesh.scale.set(0.3, 0.3, 0.3)
+
+          mesh.traverse(child => {
+            if (child.isMesh) {
+              child.castShadow = child.receiveShadow = false
+              child.material.metalness = 0
+              child.material.roughness = 1
+            }
+          })
+
+          scene.add(mesh)
+          physics.add.existing(mesh, { shape: 'hull' })
+        })
+      }
+
+      function createTorusPacking() {
+
+        if ( !state ) return;
+
+        // if ( meshNum >= 1) return;
+
+        meshNum++;
+        console.log(meshNum);
+
+        const loader1 = new THREE.GLTFLoader().load('/glbs/torus.glb', function (gltf) {
+          const mesh = gltf.scene.children[0]
+          mesh.traverse(child => {
+            if (child.isMesh) {
+              child.castShadow = child.receiveShadow = false
+              child.material.metalness = 0
+              child.material.roughness = 1
+            }
+          })
+          mesh.scale.set(7, 7, 7)
+          mesh.position.set(-0.3, -0.6, -1.675)
+          // mesh.rotation.set(Math.PI * 8 / 12, 0, Math.PI * 24 / 12)
+
+          const object = new ExtendedObject3D()
+          object.add(mesh.clone())
+
+          // object.add(cylinder.clone())
+          object.position.set(0, 5, 0)
+          // object.rotation.set(Math.PI / 4, 0, 0)
+
+          const config = { radius: 0.5, tube: 0.2, tubularSegments: 16}
+	        const quat = new THREE.Quaternion();
+	        quat.set( 0, 0, 0, meshNum );
+
+          const shape = { shape: 'torus', ...config, quat}
+          let option = { addChildren: false, ...shape }
+
+          scene.add(object)
+          physics.add.existing(object, option)
+          object.body.setCollisionFlags(2)
+        })
+      }
+
+      function saveSTL( scene, name ){  
+        var exporter = new STLExporter();
+        var blob = new Blob( [ exporter.parse( scene ) ] );
+        var a = document.body.appendChild( document.createElement( 'a' ) );
+        a.href = window.URL.createObjectURL( blob );
+        a.download = name + '.stl';
+        a.click();
+        // delete a;
+      }
 
       const MainScene = () => {
-        const scene = new THREE.Scene()
+
+        container = document.getElementById( 'container' );
+
+        scene = new THREE.Scene()
         scene.background = new THREE.Color(0xf0f0f0)
 
-        const camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000)
+        camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000)
         camera.position.set(6, 6, 12)
 
         const renderer = new THREE.WebGLRenderer()
         renderer.setSize(window.innerWidth, window.innerHeight)
-        document.body.appendChild(renderer.domElement)
+        container.appendChild(renderer.domElement)
 
         const controls = new THREE.OrbitControls(camera, renderer.domElement)
 
@@ -40,30 +126,80 @@
         light.position.multiplyScalar(1.3)
 
         // initialize physics
-        const physics = new AmmoPhysics(scene)
+        physics = new AmmoPhysics(scene)
         physics.debug.enable(true)
 
+        
         // add a ground
-        physics.add.ground({ width: 20, height: 20 })
+        physics.add.ground({ width: 5, height: 5 })
+        
+        
+        // add mesh with physics
+        // var numMeshs = 100;
+        // for ( let j = 0; j < numMeshs; j ++ ) {
+		    //   createMesh(0, 5, 0)
+        // }
+        
 
-        // add suzanne with physics
-        const loader = new THREE.GLTFLoader().load('/glbs/file_pack.glb', function (gltf) {
-          const suzanne = gltf.scene.children[0]
-          suzanne.position.setY(5)
 
-          suzanne.traverse(child => {
-            if (child.isMesh) {
-              child.castShadow = child.receiveShadow = false
-              child.material.metalness = 0
-              child.material.roughness = 1
+        // ------------------------
+        // add outer cylinder using extrude (https://stackoverflow.com/a/31107090)
+        // ------------------------
+        const extrudeSettings = {
+          depth: 4,
+          steps: 1,
+          bevelEnabled: false,
+          curveSegments: 8
+        }
+
+        const arcShape = new THREE.Shape()
+        arcShape.absarc(0, 0, 2, 0, Math.PI * 2, 0, false)
+
+        const holePath = new THREE.Path()
+        holePath.absarc(0, 0, 1.5, 0, Math.PI * 2, true)
+        arcShape.holes.push(holePath)
+
+        const geo = new THREE.ExtrudeBufferGeometry(arcShape, extrudeSettings)
+        const mat = new THREE.MeshBasicMaterial({ color: 'khaki' })
+        const mesh = new THREE.Mesh(geo, mat)
+        geo.translate(0, 0, -1) // somehow this has an offset as well :/
+        mesh.rotateX(Math.PI / 2)
+        mesh.position.y = 2
+        scene.add(mesh)
+        physics.add.existing(mesh, { shape: 'hacd' })
+        mesh.body.setCollisionFlags(2)
+
+        window.addEventListener( 'keydown', function ( event ) {
+          switch ( event.keyCode ) {
+            // Q
+            case 69:
+              saveSTL( scene, "file")
+              break;
+          }
+
+        } );
+
+        document.getElementById( 'export' ).addEventListener('click',
+          function() {
+            saveSTL( scene, "file")
+          }
+        )
+        document.getElementById( 'startStop' ).addEventListener('click',
+            function() {
+                if ( this.innerHTML === 'Start' ) {
+                    this.innerHTML = 'Stop';
+                    state = true;
+                } else {
+                    this.innerHTML = 'Start';
+                    state = false;
+                }
             }
-          })
-
-          scene.add(suzanne)
-          physics.add.existing(suzanne, { shape: 'convex' })
-        })
+        )
+        // ------------------------
 
         const clock = new THREE.Clock()
+
+        setInterval( createTorusPacking, 1000 );
 
         const animate = () => {
           // update physics
@@ -76,9 +212,13 @@
         }
         requestAnimationFrame(animate)
       }
-      PhysicsLoader('/external/lib/ammo/kripken', () => MainScene())
-
+      // PhysicsLoader('/external/lib/ammo/kripken', () => MainScene())
+      PhysicsLoader('/external/lib/ammo/moz', () => MainScene())
       console.log(`three.js version "${THREE.REVISION}"`)
     </script>
+
+    <div id="container" width="1200" height="1200"></div>
+    
+
   </body>
 </html>
